--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 Django==4.2.7
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
-djangorestframework-simplejwt==5.3.0
+djangorestframework-simplejwt>=5.3.0
 Pillow>=10.4.0
 python-decouple==3.8
 psycopg2-binary==2.9.9
 gunicorn==21.2.0
+setuptools>=68.0.0
 
 
 
