--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ django-cors-headers==4.3.1
 djangorestframework-simplejwt>=5.3.0
 Pillow>=10.4.0
 python-decouple==3.8
-psycopg2==2.9.9
+psycopg[binary]==3.1.12
 gunicorn==21.2.0
 setuptools>=68.0.0
 requests>=2.31.0
