--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Django==4.2.7
-djangorestframework==3.14.0
-django-cors-headers==4.3.1
+Django>=5.1.3
+djangorestframework>=3.14.0
+django-cors-headers>=4.3.1
 djangorestframework-simplejwt>=5.3.0
 Pillow>=10.4.0
-python-decouple==3.8
-psycopg[binary]==3.1.12
-gunicorn==21.2.0
+python-decouple>=3.8
+psycopg[binary]>=3.2.2
+gunicorn>=21.2.0
 setuptools>=68.0.0
 requests>=2.31.0
 pywebpush>=1.15.0
